@@ -7,7 +7,7 @@ if(!isset($_COOKIE['uploadPermissions']) || substr($_COOKIE['uploadPermissions']
 //Init DB
 $db = new mysqli(DB_HOST,DB_USR,DB_PASS,DB_NAME);
 $uCData = str_replace(COOKIE_DATA, '', $_COOKIE['uploadPermissions']);
-$qry = $db->query("SELECT * FROM users WHERE cookie_data = '$uCData'");
+$qry = $db->query("SELECT * FROM ".TB_USRS." WHERE cookie_data = '$uCData'");
 if(strlen($uCData) == 0 || $qry->num_rows == 0) {
 	header('Location: /login');
 	die();
