@@ -1,7 +1,18 @@
 <?php
-require_once('config.php');
-$key = str_replace('/approve/','',$_SERVER['REQUEST_URI']);
+require_once('config.php'); #To prevent approval of accounts without logging in
+if(!isset($_COOKIE['uploadPermissions']) || substr($_COOKIE['uploadPermissions'],0,45) != COOKIE_DATA) {
+	header('Location: /login');
+	die();
+}
+//Init DB
 $db = new mysqli(DB_HOST,DB_USR,DB_PASS,DB_NAME);
+$uCData = str_replace(COOKIE_DATA, '', $_COOKIE['uploadPermissions']);
+$qry = $db->query("SELECT * FROM ".TB_USRS." WHERE cookie_data = '$uCData'");
+if(strlen($uCData) == 0 || $qry->num_rows == 0) {
+	header('Location: /login');
+	die();
+}
+$key = str_replace('/approve/','',$_SERVER['REQUEST_URI']);
 function generate($len) {
 	//Random number provided by rolling a die. Guaranteed to be random.
 	//return 4;
