@@ -7,7 +7,7 @@ if(!isset($_COOKIE['uploadPermissions']) || substr($_COOKIE['uploadPermissions']
 //Init DB
 $db = new mysqli(DB_HOST,DB_USR,DB_PASS,DB_NAME);
 $uCData = str_replace(COOKIE_DATA, '', $_COOKIE['uploadPermissions']);
-$qry = $db->query("SELECT * FROM users WHERE cookie_data = '$uCData'");
+$qry = $db->query("SELECT * FROM ".TB_USRS." WHERE cookie_data = '$uCData'");
 if(strlen($uCData) == 0 || $qry->num_rows == 0) {
 	header('Location: /login');
 	die();
@@ -22,11 +22,11 @@ if(strlen($uCData) == 0 || $qry->num_rows == 0) {
 		<div id='wrapper'>
 <?php
 $key = str_replace('/delete/','',$_SERVER['REQUEST_URI']);
-$q = $db->query("SELECT * FROM main WHERE short='$key' AND isURL=2");
+$q = $db->query("SELECT * FROM ".TB_MAIN." WHERE short='$key' AND isURL=2");
 if($q->num_rows == 0)
 	$err .= 'No such file exists.';
 else { #File exists, but the user might not be allowed to delete it.
-	$q = $db->query("SELECT * FROM main WHERE short='$key' AND isURL=2 AND uCookie='$uCData'");
+	$q = $db->query("SELECT * FROM ".TB_MAIN." WHERE short='$key' AND isURL=2 AND uCookie='$uCData'");
 	if($q->num_rows == 0)
 		$err .= "You did not upload this file!";
 }
@@ -34,7 +34,8 @@ else { #File exists, but the user might not be allowed to delete it.
 			<h1><?php echo $err; ?></h1>
 <?php
 if(!isset($err)) {#File exists and user's authorised to delete it
-	$d = $db->query("DELETE FROM main WHERE short='$key' AND isURL=2 AND uCookie='$uCData'"); #This could also be used to delete ShortURLs, but I won't write that capability to prevent entries from being accidentally deleted.
+	$d = $db->query("DELETE FROM ".TB_MAIN." WHERE short='$key' AND isURL=2 AND uCookie='$uCData'"); #This could also be used to delete ShortURLs, but I won't write that capability to prevent entries from being accidentally deleted.
+	$p = $db->query("INSERT INTO ".TB_MAIN." (short, notshort, isURL) VALUES ('$key','',3)"); #Allows the system to display a File Deleted message, which is more helpful.
 	$q = $q->fetch_assoc();
 	unlink($q['notshort']);
 	?>
