@@ -1,7 +1,15 @@
 <?php
 require_once('config.php');
-if(isset($_COOKIE['uploadPermissions']) && $_COOKIE['uploadPermissions'] == COOKIE_DATA) {
-	header('Location: /add');
+if(!isset($_COOKIE['uploadPermissions']) || substr($_COOKIE['uploadPermissions'],0,45) != COOKIE_DATA) {
+	header('Location: /login');
+	die();
+}
+//Init DB
+$db = new mysqli(DB_HOST,DB_USR,DB_PASS,DB_NAME);
+$uCData = str_replace(COOKIE_DATA, '', $_COOKIE['uploadPermissions']);
+$qry = $db->query("SELECT * FROM ".TB_USRS." WHERE cookie_data = '$uCData'");
+if(strlen($uCData) == 0 || $qry->num_rows == 0) {
+	header('Location: /login');
 	die();
 }
 function generate() {
@@ -21,7 +29,6 @@ function specialCheck($chk) {
 	else
 		return true;
 }
-$db = new mysqli(DB_HOST,DB_USR,DB_PASS,DB_NAME);
 if(isset($_POST['reqUname']) && strlen($_POST['reqUname']) > 0) {
 	$uname = $_POST['reqUname'];
 	$passwd = hash('whirlpool',$_POST['reqPasswd']);
